<resources>
    <string name="app_name">DrinkTime</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="menu_personal_profile">Personal profile</string>
    <string name="workday_schedule_fragschedule">Workday schedule</string>
    <string name="earliest_notification_frag_schedule">Earliest notification</string>
    <string name="latest_notification_frag_schedule">Latest notification</string>
    <string name="weekend_schedule_frag_schedule">Weekend schedule</string>
    <string name="snooze_time_mins_fragment_schedule">Snooze time (mins)</string>
    <string name="max_number_of_snoozes_fragment_schedule">Max number of snoozes</string>
    <string name="wait_time_after_last_snooze_till_next_alarm_fragment_schedule">Wait time after last snooze till next alarm</string>
    <string name="hydration_1_d_drink_fragment">Hydration: %1$d percent</string>
    <string name="volume_to_drink_1_d_ml_drink_fragment">Volume to drink: %1$d ml</string>
    <string name="planned_drink_for_today_1_d_ml_fragment_home">Planned drink for today: %1$d ml</string>
    <string name="actual_drink_today_1_d_ml_fragment_home">Actual drink today: %1$d ml</string>
    <string name="yet_to_drink_today_1_d_ml_fragment_home">Yet to drink today: %1$d ml</string>
    <string name="default_water_amount_schedule_fragment">Default water amount (ml)</string>
</resources>