<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="hu.bme.aut.android.drinktime.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_schedule"
        android:name="hu.bme.aut.android.drinktime.ui.scehdule.ScheduleSettingsFragment"
        android:label="Schedule"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="hu.bme.aut.android.drinktime.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/pref_personal_profile"
        android:name="hu.bme.aut.android.drinktime.ui.settings.PersonalProfileSettingsFragment"
        android:label="@string/menu_personal_profile"
        tools:layout="@layout/fragment_personal_profile_preferences" />
</navigation>