<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:id="@+id/home_constraint_layout">


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/tvPlannedDrink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        android:layout_margin="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:layout_height="300dp"
        tools:layout_width="300dp"></androidx.viewpager.widget.ViewPager>

    <TextView
        android:id="@+id/tvPlannedDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planned_drink_for_today_1_d_ml_fragment_home"

        app:layout_constraintBottom_toTopOf="@+id/tvActualDrink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvActualDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actual_drink_today_1_d_ml_fragment_home"
        app:layout_constraintBottom_toTopOf="@+id/tvRemainingDrink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvRemainingDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/yet_to_drink_today_1_d_ml_fragment_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Test alarm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>